--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username = bankUser
 spring.datasource.password = user
 spring.jpa.hibernate.ddl-auto= update
 
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
