--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,20 @@ spring.datasource.username=admin
 spring.datasource.password=passME1jObzRW
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
 
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-logging.level.org.postgresql=DEBUG
-
-#spring.main.allow-bean-definition-overriding=true
-
-spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
+spring.jpa.hibernate.ddl-auto=update
 
 bank.jwtSecret=======================PigTails=Isiss================t===========
 bank.jwtExpirationMs=28800000
 
 spring.elasticsearch.uris=http://localhost:9200
+
+#logging.level.org.postgresql=DEBUG
+#logging.level.com.bank=DEBUG
+spring.profiles.active=dev
+
+cache.user.ttl=28800000
 
